Remove Car Rental project and update Servicehub project for improved CORS handling and frontend API client changes